Fix width on mobile with no results

--- a/packages/block-editor/src/components/inserter/style.scss
+++ b/packages/block-editor/src/components/inserter/style.scss
@@ -51,7 +51,7 @@ $block-inserter-search-height: 38px;
 }
 
 .block-editor-inserter__main-area {
-	width: auto;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	height: 100%;
